# git-insights

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
git_insights/: __main__.py  cli.py
git_insights/analyzers/: activity.py  contributions.py  core.py  hotspots.py
git_insights/reporters/: console.py  html.py  json_reporter.py
tests/: test_contributions.py  test_core.py  test_hotspots.py
