[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "git-insights"
version = "1.0.0"
description = "CLI + HTML report that analyzes git repository history"
authors = [{ name = "Benjamín Serrano" }]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "gitpython>=3.1",
    "pandas>=2.0",
    "jinja2>=3.1",
    "rich>=13.0",
]

[project.scripts]
git-insights = "git_insights.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
